# agentic-research-orchestrator

./: .gitignore  CONTRIBUTING.md  HANDOFF.md  LICENSE  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  npm-publish-aro-installer.yml
docs/: CLI_SPEC.md  CODEBASE_REVIEW_2026-03-04.md  EPISTEMIC_GROUNDING.md  EXECUTION_PLAN.md  IMPLEMENTATION_PLAN.md  INTEGRATIONS.md  MULTI_ORCHESTRATOR_SUPERVISOR_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  RELEASING.md  RUN_BUNDLE_SPEC.md  SKILLS_AND_INSTALLER_PLAN.md  TASK_WRITING_GUIDE.md  TROUBLESHOOTING.md
docs/RUNNER_GUIDES/: CLAUDE_COWORK.md  CLAUDE_DESKTOP_RESEARCH.md  CODEX.md  GEMINI_DEEP_RESEARCH.md
integrations/npm/aro-installer/: README.md  package.json
src/ar/: cli.py
src/ar/mcp/: serve.py  server.py
src/ar/run/: apply_plan.py  export_orchestrator_prompt.py  export_prompts.py  generate_tasks.py  import_output.py  merge.py  propose_followups.py  scaffold.py  spawn_codex.py  status.py  validate.py
tests/: test_apply_plan.py  test_aro_installer.py  test_cli_help.py  test_codex_events.py  test_export_orchestrator_prompt.py  test_export_prompts.py  test_generate_tasks.py  test_import.py  test_mcp_server.py  test_merge.py  test_merge_synthesis.py  test_propose_followups.py  test_scaffold.py  test_spawn_codex_cmd.py  test_status.py  test_supervisor_plan.py  test_validate.py
tests/fixtures/: codex_EVENTS_token_count.jsonl
tools/: extract_codex_user_messages.py
(+6 files in other folders)
