[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-research-orchestrator"
version = "0.1.0"
description = "Repo-agnostic research run bundle + orchestrator tooling"
readme = "docs/IMPLEMENTATION_PLAN.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ar = "ar.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
